--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advent1周年-公車計畫</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
 </head>
 <body>
     <!-- 標頭  -->
@@ -32,10 +30,19 @@
     </section>
     <!--活動介紹-->
     <section class="description" id="description">
-        <div class="desc">
-            <h2>活動介紹</h2>
-            <p>我們</p>
-        </div>
+            <div class="desc">
+                <h2>活動介紹</h2>
+                <p>這裡是Advnet中文粉絲群團隊，為了慶祝Advent即將到來的一周年，我們將籌募公彩繪 ...</p>
+            </div>
+            <div class="row">
+                <div class="image">
+                    <img src="img/about-image.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="img/about-image.png" alt="">
+                </div>
+            </div>
+
         
     </section>
     <!--成員-->
@@ -54,15 +61,15 @@
             </div>
             <div class="member-box">
                 <img src="img/Koseki-Bijou_pr-img_00.png" alt="" class="idolsStyle">
-                <p>Mococo Abyssgard</p>
-            </div>
-            <div class="member-box">
-                <img src="img/Fuwawa-Abyssgard_pr-img_00.png" alt="" class="idolsStyle">
                 <p>Koseki Bijou</p>
             </div>
             <div class="member-box">
-                <img src="img/Mococo-Abyssgard_pr-img_00.png" alt="" class="idolsStyle">
+                <img src="img/Fuwawa-Abyssgard_pr-img_00.png" alt="" class="idolsStyle">
                 <p>Fuwawa Abyssgard</p>
+            </div>
+            <div class="member-box">
+                <img src="img/Mococo-Abyssgard_pr-img_00.png" alt="" class="idolsStyle">
+                <p>Mococo Abyssgard</p>
             </div>
         </div>
     </section>
