--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <a href="#" class="logo">一周年公車計畫</a>
             <!--navbar-->
             <div class="navbar">
-                <a href="#home" class="nav-link">主頁</a>
-                <a href="#home" class="nav-link">關於我們</a>
-                <a href="#home" class="nav-link">活動貼文</a>
-                <a href="#home" class="nav-link">特別感謝</a>
+                <a href="index.html" class="nav-link">主頁</a>
+                <a href="htmls/about.html" class="nav-link">關於我們</a>
+                <a href="htmls/posts.html" class="nav-link">活動貼文</a>
+                <a href="htmls/Special_Thanks.html" class="nav-link">特別感謝</a>
             </div>
         </div>
     </header>
@@ -51,7 +51,7 @@
             <h2>成員連結</h2>
         </div>
         <div class="member-cards">
-            <div class="member-box ">
+            <div class="member-box">
                 <img src="img/Shiori-Novella_pr-img_00.png" alt="" class="idolsStyle">
                 <p>Shiori Novella</p>
             </div>
@@ -71,6 +71,14 @@
                 <img src="img/Mococo-Abyssgard_pr-img_00.png" alt="" class="idolsStyle">
                 <p>Mococo Abyssgard</p>
             </div>
+        </div>
+    </section>
+    <section class="copyright">
+        <div class="copy-h2">
+            <h2>版權聲明
+            </h2>
+            <p>此企劃為Discord群組 Advent公車計畫 所有</p>
+            <p>Copyright © 2024 Advent-1周年公車 隱私權政策</p>
         </div>
     </section>
     <script src="js/main.js"></script>
