--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advent1周年-公車計畫</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 標頭  -->
     <header>
+        <!-- header container -->
         <div class="nav container">
             <a href="#" class="logo">一周年公車計畫</a>
             <!--navbar-->
@@ -50,7 +51,7 @@
         
     </section>
     <!--成員-->
-    <section class="member" id="member">
+    <section class="main-member" id="main-member">
         <div class="heading">
             <h2>成員連結</h2>
         </div>
