--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script
+    src="https://kit.fontawesome.com/b9d712cc5d.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
 <body>
     <!-- 標頭  -->
-    <header>
+    <header class="header">
         <!-- header container -->
         <div class="nav container">
             <a href="#" class="logo">一周年公車計畫</a>
@@ -23,14 +27,13 @@
                 <a href="htmls/Special_Thanks.html" class="nav-link">特別感謝</a>
             </div>
         </div>
+        <div class="fas fa-bars" id="menu-btn"></div>
+        
     </header>
 
     <!--主頁-->
     <section class="home" id="home">
-        <div class="home-text"> z
-            <h1>Hololive Advent</h1>
-            <h2>一周年公車紀念快樂</h2>
-        </div>
+        <div></div>
     </section>
     <!--活動介紹-->
     <section class="description" id="description">
@@ -113,5 +116,6 @@
         </div>
     </section>
     <script src="js/fade.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
