--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!--主頁-->
     <section class="home" id="home">
-        <div></div>
+        <img src="img/bg-image.png" alt="主頁背景" class="home-img">
     </section>
     <!--活動介紹-->
     <section class="description" id="description">
