--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
     <section class="copyright">
-        <div class="copy-h2">
+        <div class="heading copy-h2">
             <h2>版權聲明
             </h2>
             <p>此企劃為Discord群組 Advent公車計畫 所有</p>
